Opened 12 years ago
Closed 12 years ago
#9043 closed bug (fixed)
Regression: Haiku boots in Vesa-Mode on AMD Radeon HD 6320
Reported by: | blutigerWilliam | Owned by: | kallisti5 |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha4 |
Component: | Drivers/Graphics/radeon_hd | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Haiku boots in VESA-Mode with a resolution of 1024x768. It seems like my AMD Radeon HD 6320 isn't recognized any more. Build: hrevr1alpha4-44621. Worked fine with hrev44459.
Attachments (3)
Change History (13)
by , 12 years ago
Attachment: | syslog.txt added |
---|
comment:1 by , 12 years ago
Component: | - General → Drivers/Graphics/radeon_hd |
---|---|
Owner: | changed from | to
comment:2 by , 12 years ago
by , 12 years ago
Attachment: | syslog_hrev44459.txt added |
---|
comment:3 by , 12 years ago
Made a new syslog with hrev44459 and attached it. I hope it is useful...
comment:4 by , 12 years ago
patch: | 0 → 1 |
---|
comment:5 by , 12 years ago
Milestone: | R1 → R1/alpha4 |
---|---|
patch: | 1 → 0 |
pushing to get this fix included in R1A4
comment:6 by , 12 years ago
It seems that only the sumo and sumo2 chipsets have the DP bridge-only configuration. Palm *can* have DP bridges, but it isn't a requirement (up to the vendor)... thus users have a shot at them working.
If your Radeon HD palm gpu has a DP-bridge and doesn't work:
- boot to safe video mode
- remove radeon_hd from /boot/system/add-ons/kernel/drivers/bin/
- reboot
comment:7 by , 12 years ago
Sorry, did you apply a change? Tested it with the latest nightly(hrevr1alpha4-44630), but it still boots in VESA-Mode...
comment:9 by , 12 years ago
patch: | 1 → 0 |
---|
picked for R1A4 in hrevr1alpha4-44640
- Sumo are the only APU's with DP-only bridges
- While Palm *may* have DP bridges, it's not a requirement. (up to the vendor)
- Palm chipsets with DP bridges will need to boot vesa and remove radeon_hd for now.
comment:10 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
I dropped many of the HD 6xxx laptop chipsets because a majority of them didn't work at this time(including the one in my laptop)... Strange that yours did work.
The goal of disabling mobile 6xxx chipsets in favor of stability vs new users getting stuck with just a "black screen" when they boot.
Do you have any of the syslogs from hrev44459? Do you know if your 6320 has a NUTMEG or TRAVIS encoder? (the syslogs for radeon_hd should of said)
Anyway, this regression was on purpose.