radeon_hd: Re-enable Palm cards for R1A4

* This is a release branch *only* change!
* Sumo are the only APU's with DP-only bridges
* While Palm *may* have DP bridges, it's not
  a requirement.
* Palm chipsets with DP bridges will need to
  boot vesa and remove radeon_hd for now.
* Fixes #9043